fixed issue #9 - used a yaxis in body of css to make side scrollbar always appear to prevent glitch of content shift.

--- a/static/css/zulu.css
+++ b/static/css/zulu.css
@@ -19,3 +19,7 @@
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
 	border-color: rgb(221, 221, 221);
 }
+
+body{
+overflow-y: scroll;
+}
